--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=bibleTodo
+
+server.port = 8090
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=system
+spring.datasource.password=1111
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+logging.level.org.springframework=info
+logging.level.org.zercok=debug
+logging.level.org.springframework.security=trace
