oracle -> mariaDB JPA -> myBatis DB 객체 추가 2024-11-01 17:17

--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=bibleTodo
 
 server.port = 8090
 
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=system
-spring.datasource.password=1111
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb:thin:@127.0.0.1:3306/
+spring.datasource.username=Bible
+spring.datasource.password=#SuN&MoOn9898@!~
+
 
 logging.level.org.springframework=info
 logging.level.org.zercok=debug
