--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -1,13 +1,19 @@
+# 애플리케이션 이름
 spring.application.name=bibleTodo
 
-server.port = 8090
+# 서버 포트 설정
+server.port=8090
 
+# 데이터베이스 연결 설정
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb:thin:@127.0.0.1:3306/
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/bible
 spring.datasource.username=Bible
 spring.datasource.password=#SuN&MoOn9898@!~
 
-
+# 로그 레벨 설정
 logging.level.org.springframework=info
 logging.level.org.zercok=debug
 logging.level.org.springframework.security=trace
+
+# MyBatis 설정
+mybatis.mapper-locations=classpath:mappers/*.xml
