--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -17,3 +17,5 @@ logging.level.org.springframework.security=trace
 
 # MyBatis 설정
 mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.typeAliasesPackage=com.bible.todo.domain.user.vo
+
