--- a/bibleTodo/build.gradle
+++ b/bibleTodo/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	
 	implementation 'org.jsoup:jsoup:1.15.3'
 	runtimeOnly 'com.h2database:h2'
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
