--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -19,3 +19,31 @@ logging.level.org.springframework.security=trace
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.typeAliasesPackage=com.bible.todo.domain.user.vo
 
+# 세션 소멸 시간 설정
+#초 기반
+#server.servlet.session.timeout=1800
+#분 기반
+#server.servlet.session.timeout=90m
+
+# 깃허브에 올릴 때 이런 건 조심해야 함 
+#registration 구글
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-id=83691840313-588umki41ni9b9rdbqeabpr41hct5ocm.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8090/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+#registration 네이버
+spring.security.oauth2.client.registration.naver.client-name=naver
+spring.security.oauth2.client.registration.naver.client-id=8gejO_CzriJSI3mUDdAH
+spring.security.oauth2.client.registration.naver.client-secret=Z8l8UCTBN4
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8090/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email
+
+#provider 네이버
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
