--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -52,12 +52,14 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.client-id=17250701753804db21dd63c3a4adfbf3
 spring.security.oauth2.client.registration.kakao.client-secret=	rUSJ6c4xT8yajHIAhcyH5kFqfz377INP
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,profile_image
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8090/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.scope=	profile_nickname, profile_image
 
 #provider 카카오
+#인가 코드 요청 URI(인증 서버), 액세스 토큰 요청 URI(인증 서버), 사용자 정보 요청 URI(리소스 서버) 
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
