--- a/bibleTodo/src/main/resources/application.properties
+++ b/bibleTodo/src/main/resources/application.properties
@@ -7,6 +7,11 @@ server.servlet.encoding.force-response=true
 # 서버 포트 설정
 server.port=8090
 
+# 응답과 요청의 기본 문자 인코딩을 UTF-8로 설정
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 # 데이터베이스 연결 설정
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/bible
@@ -21,6 +26,11 @@ logging.level.org.springframework.security=trace
 # MyBatis 설정
 mybatis.mapper-locations=classpath:mappers/*.xml
 mybatis.typeAliasesPackage=com.bible.todo.domain.user.vo
+
+# 타임리프
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
 
 # 세션 소멸 시간 설정
 #초 기반
@@ -37,15 +47,16 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
 
-#registration 네이버
+#registration 네이버 :외부 서비스에서 우리 서비스를 특정하기 위해 등록하는 정보 / 등록 필수
 spring.security.oauth2.client.registration.naver.client-name=naver
 spring.security.oauth2.client.registration.naver.client-id=8gejO_CzriJSI3mUDdAH
 spring.security.oauth2.client.registration.naver.client-secret=Z8l8UCTBN4
+#내가 정한 url에서 접속을 하겠다는 의미같다.
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8090/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=name,email
 
-#provider 네이버
+#provider 네이버 : 서비스별로 정해진 값이 존재하며 OAuth2 클라이언트 의존성이 유명한 서비스의 경우 내부적으로 데이터를 가지고 있다.
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
@@ -60,10 +71,9 @@ spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 
 #provider 카카오
-#인가 코드 요청 URI(인증 서버), 액세스 토큰 요청 URI(인증 서버), 사용자 정보 요청 URI(리소스 서버) 
+#인가 코드 요청 URI(서비스 로그인 창 주소), 액세스 토큰 요청 URI(토큰 발급 서버 주소), 사용자 정보 요청 URI(사용자 정보 획득 주소) 
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
 spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
 spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
-
