--- a/bibleTodo/.gitignore
+++ b/bibleTodo/.gitignore
@@ -6,6 +6,8 @@ build/
 !**/src/test/**/build/
 
 ### STS ###
+config-properties
+
 .apt_generated
 .classpath
 .factorypath
@@ -18,6 +20,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
+
 .idea
 *.iws
 *.iml
