--- a/bibleTodo/.gitignore
+++ b/bibleTodo/.gitignore
@@ -7,7 +7,7 @@ build/
 
 ### STS ###
 config-properties
-src/resource/config.properties
+src/main/resources/config.properties
 
 .apt_generated
 .classpath
